# data

./: .gitignore  README.md  pyproject.toml
ahorramas/: extract.py  load.py  main.py  pyproject.toml
carrefour/: extract.py  load.py  locations.xml  main.py  proxy.py  pyproject.toml
carrefour/raw_data/: www.carrefour.es_supermercado_bebe_cat20006_c?offset=24.html  www.carrefour.es_supermercado_bebe_cat20006_c?offset=48.html  www.carrefour.es_supermercado_la-despensa_cat20001_c.html  www.carrefour.es_supermercado_mascotas_cat20007_c.html  www.carrefour.es_supermercado_parafarmacia_cat20008_c.html  www.carrefour.es_supermercado_productos-frescos_cat20002_c.html
utils/: .env  content.py  logger.py  postgres.py  redis.py
